--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,10 +9,11 @@
 
 <body>
     <div id="root">
-        <h1>News Evaluation System - Powered by NLP</h1>
+        <h1>News Evaluation System - Powered by MeaningCloud</h1>
         <section class="input">
             <label for="website">Enter a website:</label>
-            <input id="website" type="text" placeholder="http://www.news.com/post"></input>
+            <input id="website" type="text" placeholder="http://www.news.com/post"
+                value="https://www.bbc.co.uk/news/uk-55722168"></input>
             <button id="evaluate" type="submit">Evaluate!</button>
         </section>
         <section class="output">
