--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evaluate New NLP</title>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -12,8 +19,7 @@
         <h1>News Evaluation System - Powered by MeaningCloud</h1>
         <section class="input">
             <label for="website">Enter a website:</label>
-            <input id="website" type="text" placeholder="http://www.news.com/post"
-                value="https://www.bbc.co.uk/news/uk-55722168"></input>
+            <input id="website" type="text" placeholder="http://www.news.com/post"></input>
             <button id="evaluate" type="submit">Evaluate!</button>
         </section>
         <section class="output">
